Aligned small blobs and FEATURED PROJECT footer correctly

--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ img{
     }
     img{
         box-sizing: content-box;
-        width:214px;
+        width:40vw;
         border: 6px solid #E6E6E6;
         border-radius: 8px;
     }
